<resources>
    <string name="app_name">Pigeon</string>
    <string name="title_person">Страница</string>
    <string name="title_chats">Чаты</string>
    <string name="title_discussions">Обсуждения</string>
    <string name="title_search">Поиск</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="LogOut">Выйти из аккаунта</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>