<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/login"
        android:textSize="18sp"
        android:textColor="#AAAAAA"
        android:layout_marginTop="100dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:textSize="18sp"
        android:textColor="#AAAAAA"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/button_shape"
        android:text="@string/register"/>
    
</LinearLayout>